# rssi-collector

./: CMakeLists.txt  README.md  autoconfig.h  overlay.dts  prj.conf  prjFIND.conf
src/: UART_handler.c  UART_handler.h  main.c  mainFIND_ADDR.c  mainThreads.c  main_mac_filter_test.c
